--- a/res/layout/income.xml
+++ b/res/layout/income.xml
@@ -1,14 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/incomeMainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:columnCount="3"
+    android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="258dp"
-        android:layout_height="wrap_content"
-        android:text="Income"
+        android:id="@+id/incomeHeadingTextView"
+        android:layout_columnSpan="3"
+        android:layout_gravity="fill_horizontal"
+        android:gravity="center_horizontal"
+        android:text="@string/incomeHeading"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_green_dark" />
+
+    <TextView
+        android:id="@+id/incomeErrorTextView"
+        android:layout_column="0"
+        android:layout_columnSpan="3"
+        android:layout_gravity="fill_horizontal"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/holo_red_dark" />
+
+    <TextView
+        android:id="@+id/incomeCatView1"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/incomeAmtView1"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeBudView1"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeCatView2"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeAmtView2"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeBudView2"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeCatView3"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeAmtView3"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeBudView3"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeCatView4"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeAmtView4"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeBudView4"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeCatView5"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeAmtView5"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/incomeBudView5"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/addIncomeDetailButton"
+        android:layout_width="167dp"
+        android:layout_columnSpan="3"
+        android:layout_gravity="left|center_vertical"
+        android:layout_row="6"
+        android:text="@string/addIncome_btn_text" />
+
+</GridLayout>
