--- a/res/layout/expense.xml
+++ b/res/layout/expense.xml
@@ -28,111 +28,112 @@
 
     <TextView
         android:id="@+id/expenseCatView1"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseAmtView1"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseBudView1"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseCatView2"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseAmtView2"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseBudView2"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseCatView3"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseAmtView3"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseBudView3"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseCatView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseAmtView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseBudView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseCatView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseAmtView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/expenseBudView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/addexpenseDetailButton"
+        android:layout_width="77dp"
         android:layout_column="1"
         android:layout_gravity="center"
         android:layout_row="6"
