--- a/res/layout/income.xml
+++ b/res/layout/income.xml
@@ -28,12 +28,14 @@
 
     <TextView
         android:id="@+id/incomeCatView1"
+       android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeAmtView1"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -64,64 +66,73 @@
 
     <TextView
         android:id="@+id/incomeCatView3"
+       android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeAmtView3"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeBudView3"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeCatView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeAmtView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeBudView4"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeCatView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeAmtView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/incomeBudView5"
+        android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/addIncomeDetailButton"
-        android:layout_width="167dp"
-        android:layout_columnSpan="3"
+        android:layout_width="105dp"
+        android:layout_column="1"
         android:layout_gravity="left|center_vertical"
-        android:layout_row="6"
+        android:layout_row="7"
         android:text="@string/addIncome_btn_text" />
 
 </GridLayout>
