--- a/res/layout/add_expense.xml
+++ b/res/layout/add_expense.xml
@@ -59,8 +59,13 @@
     <EditText
         android:id="@+id/addExpenseDateEditText"
         android:layout_gravity="fill_horizontal"
+        android:clickable="false"
         android:ems="10"
-        android:inputType="date" />
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="yyyy-MM-dd"
+        android:inputType="date"
+        android:longClickable="false" />
 
     <TextView
         android:id="@+id/addExpenseBudgetTextView"
