--- a/res/layout/add_income.xml
+++ b/res/layout/add_income.xml
@@ -59,9 +59,13 @@
     <EditText
         android:id="@+id/addIncomeDateEditText"
         android:layout_gravity="fill_horizontal"
+        android:clickable="false"
         android:ems="10"
-        android:hint="dd-mm-yyyy"
-        android:inputType="date" />
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="yyyy-MM-dd"
+        android:inputType="date"
+        android:longClickable="false" />
 
     <TextView
         android:id="@+id/addIncomeBudgetTextView"
