--- a/res/layout/add_expense.xml
+++ b/res/layout/add_expense.xml
@@ -86,4 +86,12 @@
         android:layout_row="10"
         android:text="@string/addIncome_btn_text" />
 
+    <Button
+        android:id="@+id/expenseCancelButton"
+        android:layout_width="90dp"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="10"
+        android:text="@string/categoryCancelButton" />
+
 </GridLayout>
