--- a/res/layout/income.xml
+++ b/res/layout/income.xml
@@ -25,6 +25,33 @@
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/holo_red_dark" />
+    
+    <TextView
+        android:id="@+id/incomeCatNameView"
+        android:layout_width="110dp"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:text="@string/categoryTextName"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_blue_dark" />
+    
+    <TextView
+        android:id="@+id/incomeCatAmountView"
+        android:layout_width="110dp"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:text="@string/amountTextName"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_blue_dark" />
+    
+    <TextView
+        android:id="@+id/incomeCatBudgetView"
+        android:layout_width="110dp"
+        android:layout_height="44dp"
+        android:layout_gravity="left"
+        android:text="@string/budgetTextName"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_blue_dark" />
 
     <TextView
         android:id="@+id/incomeCatView1"
@@ -127,12 +154,35 @@
         android:layout_gravity="left"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <!-- <Button
+        android:id="@+id/incomeBackButton"
+        android:layout_width="105dp"
+        android:layout_column="2"
+        android:layout_gravity="left|center_vertical"
+        android:layout_row="7"
+        android:text="@string/backButton" /> -->
+
+    <Button
+        android:id="@+id/incomeToReport"
+        android:layout_width="wrap_content"
+        android:layout_column="2"
+        android:layout_gravity="left|center_vertical"
+        android:layout_row="8"
+        android:text="@string/incomeReportButton" />
+
+    <Button
+        android:id="@+id/incomeToExpense"
+        android:layout_column="0"
+        android:layout_gravity="center"
+        android:layout_row="8"
+        android:text="@string/incomeExpenseButton" />
+
     <Button
         android:id="@+id/addIncomeDetailButton"
         android:layout_width="105dp"
         android:layout_column="1"
-        android:layout_gravity="left|center_vertical"
-        android:layout_row="7"
+        android:layout_gravity="left|top"
+        android:layout_row="8"
         android:text="@string/addIncome_btn_text" />
 
 </GridLayout>
