--- a/res/layout/add_expense.xml
+++ b/res/layout/add_expense.xml
@@ -94,4 +94,13 @@
         android:layout_row="10"
         android:text="@string/categoryCancelButton" />
 
+    <ImageButton
+        android:id="@+id/quitAddExpenseButton"
+        android:layout_width="31dp"
+        android:layout_height="27dp"
+        android:layout_column="0"
+        android:layout_gravity="right|center_vertical"
+        android:layout_row="0"
+        android:src="@android:drawable/ic_notification_clear_all" />
+
 </GridLayout>
