--- a/res/layout/add_income.xml
+++ b/res/layout/add_income.xml
@@ -95,4 +95,13 @@
         android:layout_row="11"
         android:text="@string/categoryCancelButton" />
 
+    <ImageButton
+        android:id="@+id/quitAddIncomeButton"
+        android:layout_width="31dp"
+        android:layout_height="27dp"
+        android:layout_column="0"
+        android:layout_gravity="right|center_vertical"
+        android:layout_row="0"
+        android:src="@android:drawable/ic_notification_clear_all" />
+
 </GridLayout>
