--- a/res/layout/income.xml
+++ b/res/layout/income.xml
@@ -185,4 +185,13 @@
         android:layout_row="8"
         android:text="@string/addIncome_btn_text" />
 
+    <ImageButton
+        android:id="@+id/quitIncomeButton"
+         android:layout_width="31dp"
+        android:layout_height="27dp"
+        android:layout_column="2"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_row="0"
+        android:src="@android:drawable/ic_notification_clear_all" />
+
 </GridLayout>
