--- a/res/layout/report.xml
+++ b/res/layout/report.xml
@@ -93,4 +93,13 @@
         android:layout_gravity="right|top"
         android:layout_row="6" />
 
+    <ImageButton
+        android:id="@+id/quitReportButton"
+        android:layout_width="34dp"
+        android:layout_height="29dp"
+        android:layout_column="0"
+        android:layout_gravity="right|top"
+        android:layout_row="0"
+        android:src="@android:drawable/ic_notification_clear_all" />
+
 </GridLayout>
